[build-system]
requires      = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name            = "pydrawise"
description     = "Python API for interacting with Hydrawise sprinkler controllers."
authors         = [
    {name = "David Knowles", email = "dknowles2@gmail.com"},
]
dependencies    = ["aiohttp ", "apischema", "gql", "graphql-core", "requests"]
requires-python = ">=3.10"
dynamic         = ["readme", "version"]
license         = {text = "Apache License 2.0"}
keywords        = ["hydrawise", "api", "iot"]
classifiers     = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage"      = "https://github.com/dknowles2/pydrawise"
"Source Code"   = "https://github.com/dknowles2/pydrawise"
"Bug Reports"   = "https://github.com/dknowles2/pydrawise/issues"

[tool.setuptools]
platforms            = ["any"]
zip-safe             = true
include-package-data = true

[tool.setuptools.dynamic]
readme          = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools_scm]
write_to = "pydrawise/_version.py"

[tool.isort]
profile                    = "black"
combine_as_imports         = true
force_sort_within_sections = true
forced_separate            = ["tests"]